user.getFriends API
